# AgentKB

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  product.md  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
data/eval/: baseline.json  testset.json
docs/: architecture-v2.md  optimization-analysis.md  pitfalls-and-fixes.md  prompt-backend.md  prompt-frontend.md
scripts/: start.bat  start.sh
src/agentkb/: __init__.py  main.py
src/agentkb/agent/: __init__.py  graph.py  nodes.py  prompts.py  query_rewriter.py  router.py  state.py
src/agentkb/agents/: __init__.py  api.py  base.py  configurable.py  content_creator.py  custom_service.py  graph.py  knowledge_agent.py  learning_tutor.py  memory_agent.py  orchestrator.py  reflection.py  registry.py  social_writer.py  supervisor.py  task_manager.py
src/agentkb/api/: __init__.py  deps.py  routes.py  server.py
src/agentkb/config/: config.yaml  settings.py
src/agentkb/eval/: __init__.py  __main__.py  api.py  cli.py  evaluator.py  generation_eval.py  jobs.py  metrics.py  quality_gate.py  reporter.py  testset.py
src/agentkb/knowledge/: __init__.py  cache.py  chunker.py  embedder.py  graph.py  loader.py  reranker.py  retriever.py  splitter.py  vector_store.py
src/agentkb/llm/: __init__.py  base.py  deepseek_provider.py  factory.py  ollama_provider.py  (+1 more)
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py
tests/fixtures/: mcp_stdio_server.py
tests/test_agent/: test_state.py  test_tool_approval.py
tests/test_agents/: test_custom_agents.py  test_execution.py  test_graph.py  test_memory_routing.py
tests/test_api/: test_direct_entrypoint.py  test_run_stream.py  test_upload_path.py
tests/test_eval/: test_jobs.py  test_quality_gate.py
tests/test_knowledge/: test_graph.py  test_local_model_runtime.py  test_multimodal_loader.py
tests/test_llm/: test_factory.py
tests/test_mcp/: test_manager.py
tests/test_memory/: test_context.py  test_long_term.py
tests/test_multimodal/: test_vision.py
tests/test_observability/: test_metrics.py  test_middleware.py  test_tracer.py
tests/test_session/: test_manager.py
tests/test_storage/: test_migrations.py
tests/test_tools/: test_code_executor.py  test_knowledge_graph.py  test_knowledge_search_context.py  test_web_browser.py
(+43 files in other folders)
