[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkb"
version = "0.1.0"
description = "Personal Knowledge Agent — local-first AI agent for knowledge management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AgentKB Team"}]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "sentence-transformers>=2.7.0",
    "duckduckgo-search>=6.0",
    "jieba>=0.42.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "mcp==1.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
